# hypernote-mdx

./: .gitignore  AUTORESEARCH.md  Cargo.toml  DESIGN.md  HYPERNOTE_IN_PIKA_PLAN.md  README.md  TESTING.md  justfile  program.md  pyproject.toml
fuzz/: Cargo.toml
fuzz/corpus/parse_render_serialize/: basic.md  malformed.md  mixed.hnmd
fuzz/dictionaries/: mdx.dict
fuzz/fuzz_targets/: parse_render_serialize.rs
research/: plot_progress.py  run_experiment.py  run_suite_batch.py
src/: ast.rs  lib.rs  main.rs  mdx_view.rs  parser.rs  render.rs  semantic.rs  token.rs  tokenizer.rs  tree_builder.rs
tests/: ast_safety.rs  ast_snapshots.rs  chat_workload.rs  checkboxes.rs  diagnostics.rs  emoji.rs  escaping.rs  feature_requests.rs  hard_breaks.rs  improvements.rs  malformed_input.rs  mdx_view.rs  paragraph_behavior.rs  pathological_fixtures.rs  pika_plan.rs  plain_text.rs  plain_text_e2e.rs  semantic_accessors.rs  tables.rs  test_vectors.rs  tree_builder.rs
tests/pathological/: 01_caption_unclosed_heredoc_like.hnmd  03_card_caption_shell_heredoc.hnmd  04_double_angle_after_text.hnmd  README.md
