[package]
name = "hypernote-mdx-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.hypernote-mdx]
path = ".."

[[bin]]
name = "parse_render_serialize"
path = "fuzz_targets/parse_render_serialize.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
